syntax = "proto3";
package state.stats.v1;

import "types/v1/types.proto";

message Stats {
  QueryStats query_stats = 1;
}

message QueryStats {
  optional uint64 highest_aggregated_epoch = 1;
  repeated QueryStatsInner query_stats = 2;
}

message QueryStatsInner {
  types.v1.NodeId proposer = 1;
  uint64 epoch = 7;
  types.v1.CanisterId canister = 2;
  uint32 num_calls = 3;
  uint64 num_instructions = 4;
  uint64 ingress_payload_size = 5;
  uint64 egress_payload_size = 6;
}
